--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,21 @@
 name: burgan_app
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
   sdk: ^3.5.3
 
 dependencies:
+  build_runner: ^2.4.13
+  dio: ^5.7.0
   flutter:
     sdk: flutter
+  go_router: ^14.3.0
+  json_serializable: ^6.8.0
+  jwt_decode: ^0.3.1
+  provider: ^6.1.2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +24,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
