--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   jwt_decode: ^0.3.1
   provider: ^6.1.2
   shared_preferences: ^2.3.2
+  local_auth: ^2.1.3
 
 dev_dependencies:
   flutter_test:
