Burgan app V0.2 -Adds Branches -Adds permission to physical device

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   jwt_decode: ^0.3.1
   provider: ^6.1.2
   shared_preferences: ^2.3.2
+  url_launcher: ^6.0.20
+  geolocator: ^9.0.2
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
