--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   qr_flutter: ^4.0.0 # For generating QR codes
   qr_code_scanner: ^0.6.1 # For scanning QR codes
+  local_auth: ^2.3.0 # faceID
   go_router: ^14.3.0
 
 dev_dependencies:
