--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   local_auth: ^2.3.0 # faceID
   go_router: ^14.3.0
   animated_number: ^1.0.2
+  webview_flutter: ^3.0.0
 
 dev_dependencies:
   flutter_test:
